--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="https://github.com/janmelin/Blog/blob/gh-pages/public/css/style.css">
+  <link rel="stylesheet" href="https://paypal.b0.upaiyun.com/public/css/style.css">
   <link rel="stylesheet" href="/public/css/pt-serif-sans.css">
   <link rel="stylesheet" href="/public/css/embed.default.css">
 
