--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
+  <base href="https://janmelin.github.io/Blog/" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
   <!-- Enable responsiveness on mobile devices-->
@@ -14,7 +15,7 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="https://paypal.b0.upaiyun.com/public/css/style.css">
+  <link rel="stylesheet" href="/public/css/style.css">
   <link rel="stylesheet" href="/public/css/pt-serif-sans.css">
   <link rel="stylesheet" href="/public/css/embed.default.css">
 
