--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
-  <base href="https://janmelin.github.io/Blog/" />
+  <!--base href="https://janmelin.github.io/Blog/" /-->
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
   <!-- Enable responsiveness on mobile devices-->
@@ -15,17 +15,20 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="public/css/style.css">
+  <link rel="stylesheet" href="/public/css/poole.css">
+  <link rel="stylesheet" href="/public/css/syntax.css">
+  <link rel="stylesheet" href="/public/css/lanyon.css">
+  <!--link rel="stylesheet" href="public/css/style.css">
   <link rel="stylesheet" href="public/css/pt-serif-sans.css">
-  <link rel="stylesheet" href="public/css/embed.default.css">
+  <link rel="stylesheet" href="public/css/embed.default.css"-->
 
   <!--link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/lanyon.css">
   < link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400" -->
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="public/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="public/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
+  <link rel="shortcut icon" href="/public/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
