--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl}}/public/css/poole.css">
+  <link rel="stylesheet" href="{{ site.baseurl}}/public/css/style.css">
   <link rel="stylesheet" href="{{ site.baseurl}}/public/css/syntax.css">
   <link rel="stylesheet" href="{{ site.baseurl}}/public/css/lanyon.css">
   <!--link rel="stylesheet" href="public/css/style.css">
