--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -134,8 +134,11 @@ h1, h2, h3, h4, h5, h6 {
   overflow-y: auto;
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-size: .875rem; /* 15px */
+  -webkit-font-smoothing: antialiased;
   color: rgba(255,255,255,.6);
   background-color: #202020;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 @media (min-width: 30rem) {
   .sidebar {
