--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -277,10 +277,18 @@ a.sidebar-nav-item:focus {
 
 #sidebar-checkbox:checked + .sidebar {
   left: 0;
+  -webkit-transition: all .3s ease-in-out;
+     -moz-transition: all .3s ease-in-out;
+      -ms-transition: all .3s ease-in-out;
+          transition: all .3s ease-in-out;
   visibility: visible;
 }
 #sidebar-checkbox:checked ~ .wrap {
   left: 14rem;
+  -webkit-transition: left .3s ease-in-out;
+     -moz-transition: left .3s ease-in-out;
+      -ms-transition: left .3s ease-in-out;
+          transition: left .3s ease-in-out;
 }
 
 
