--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -25,11 +25,11 @@ body {
 }
 
 html {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: "PT Serif", Georgia, Helvetica, serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "PT Sans", "Times New Roman", Arial, sans-serif;
   font-weight: 400;
   color: #313131;
   letter-spacing: -.025rem;
@@ -125,116 +125,159 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Style and "hide" the sidebar */
 .sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: -14rem;
-    width: 14rem;
-    visibility: hidden;
-    overflow-y: auto;
-    font-family: "PT Sans",  Helvetica,  Arial,  sans-serif;
-    -webkit-font-smoothing: antialiased;
-    font-size: .875rem;
-    color: rgba(255, 255, 255, 0.6);
-    background-color: #202020;
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: -14rem;
+  width: 14rem;
+  visibility: hidden;
+  overflow-y: auto;
+  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-size: .875rem; /* 15px */
+  color: rgba(255,255,255,.6);
+  background-color: #202020;
 }
-@media (min-width:38em) {
-    .sidebar {
-    font-size: .75rem;
+@media (min-width: 30rem) {
+  .sidebar {
+    font-size: .75rem; /* 14px */
+  }
 }
-}.sidebar a {
-    font-weight: normal;
-    color: #fff;
+
+/* Sidebar content */
+.sidebar a {
+  font-weight: normal;
+  color: #fff;
 }
 .sidebar-item {
-    padding: 1rem;
+  padding: 1rem;
 }
 .sidebar-item p:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
+
+/* Sidebar nav */
 .sidebar-nav {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  border-bottom: 1px solid rgba(255,255,255,.1);
 }
 .sidebar-nav-item {
-    display: block;
-    padding: .5rem 1rem;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
+  display: block;
+  padding: .5rem 1rem;
+  border-top: 1px solid rgba(255,255,255,.1);
 }
-.sidebar-nav-item.active, a.sidebar-nav-item:hover, a.sidebar-nav-item:focus {
-    text-decoration: none;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-color: transparent;
+.sidebar-nav-item.active,
+a.sidebar-nav-item:hover,
+a.sidebar-nav-item:focus {
+  text-decoration: none;
+  background-color: rgba(255,255,255,.1);
+  border-color: transparent;
 }
-@media (min-width:48em) {
-    .sidebar-item {
+
+@media (min-width: 48rem) {
+  .sidebar-item {
     padding: 1.5rem;
-}
-.sidebar-nav-item {
-    padding-left: 1.5rem;
+  }
+  .sidebar-nav-item {
+    padding-left:  1.5rem;
     padding-right: 1.5rem;
+  }
 }
-}.sidebar-checkbox {
-    position: absolute;
-    opacity: 0;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+
+/* Hide the sidebar checkbox that we toggle with `.sidebar-toggle` */
+.sidebar-checkbox {
+  display: none;
 }
+
+/* Style the `label` that we use to target the `.sidebar-checkbox` */
 .sidebar-toggle {
-    position: absolute;
-    top: .8rem;
-    left: 1rem;
-    display: block;
-    padding: .25rem .75rem;
-    color: #505050;
-    background-color: #fafafa;
-    border-radius: .25rem;
-    cursor: pointer;
+  position: absolute;
+  top:  1rem;
+  left: 1rem;
+  display: block;
+  width: 2.2rem;
+  padding: .5rem .65rem;
+  color: #505050;
+  background-color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
 }
 .sidebar-toggle:before {
-    display: inline-block;
-    width: 1rem;
-    height: .75rem;
-    content: "";
-    background-image: -webkit-linear-gradient(top,  #555,  #555 20%,  #fff 20%,  #fff 40%,  #555 40%,  #555 60%,  #fff 60%,  #fff 80%,  #555 80%,  #555 100%);
-    background-image: linear-gradient(to bottom,  #555,  #555 20%,  #fff 20%,  #fff 40%,  #555 40%,  #555 60%,  #fff 60%,  #fff 80%,  #555 80%,  #555 100%);
+  display: block;
+  content: "";
+  width: 100%;
+  padding-bottom: .125rem;
+  border-top: .375rem double;
+  border-bottom: .125rem solid;
+
+  /* Make the border inside the box */
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
-.sidebar-toggle:active, #sidebar-checkbox:focus ~ .sidebar-toggle, #sidebar-checkbox:checked ~ .sidebar-toggle {
-    color: #fafafa;
-    background-color: #555;
+
+.sidebar-toggle:active,
+#sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
+  color: #fff;
+  background-color: #505050;
 }
-.sidebar-toggle:active:before, #sidebar-checkbox:focus ~ .sidebar-toggle:before, #sidebar-checkbox:checked ~ .sidebar-toggle:before {
-    background-image: -webkit-linear-gradient(top,  #fff,  #fff 20%,  #555 20%,  #555 40%,  #fff 40%,  #fff 60%,  #555 60%,  #555 80%,  #fff 80%,  #fff 100%);
-    background-image: linear-gradient(to bottom,  #fff,  #fff 20%,  #555 20%,  #555 40%,  #fff 40%,  #fff 60%,  #555 60%,  #555 80%,  #fff 80%,  #fff 100%);
-}
-@media (min-width:30.1em) {
-    .sidebar-toggle {
+
+@media (min-width: 30.1rem) {
+  .sidebar-toggle {
     position: fixed;
+    width: 2.25rem;
+  }
+  .sidebar-toggle:before {
+    padding-bottom: .15rem;
+    border-top-width: .45rem;
+    border-bottom-width: .15rem;
+  }
 }
-}@media print {
-    .sidebar-toggle {
-    display: none;
-}
-}.wrap, .sidebar, .sidebar-toggle {
+
+
+/* Slide effect
+ *
+ * Handle the sliding effects of the sidebar and content in one spot, seperate
+ * from the default styles.
+ *
+ * As an a heads up, we don't use `transform: translate3d()` here because when
+ * mixed with `position: fixed;` for the sidebar toggle, it creates a new
+ * containing block. Put simply, the fixed sidebar toggle behaves like
+ * `position: absolute;` when transformed.
+ *
+ * Read more about it at http://meyerweb.com/eric/thoughts/2011/09/12/.
+ */
+
+.wrap,
+.sidebar,
+.sidebar-toggle {
     -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+       -moz-backface-visibility: hidden;
+        -ms-backface-visibility: hidden;
+            backface-visibility: hidden;
+  -webkit-perspective: 1000;
+     -moz-perspective: 1000;
+      -ms-perspective: 1000;
+          perspective: 1000;
 }
-.wrap, .sidebar-toggle {
-    -webkit-transition: -webkit-transform .3s ease-in-out;
-    transition: -webkit-transform .3s ease-in-out;
-    transition: transform .3s ease-in-out;
-    transition: transform .3s ease-in-out,  -webkit-transform .3s ease-in-out;
+.sidebar {
+  -webkit-transition: all .3s ease-in-out;
+     -moz-transition: all .3s ease-in-out;
+      -ms-transition: all .3s ease-in-out;
+          transition: all .3s ease-in-out;
 }
-#sidebar-checkbox:checked+.sidebar {
-    z-index: 10;
-    visibility: visible;
+.wrap,
+.sidebar-toggle {
+  -webkit-transition: left .3s ease-in-out;
+     -moz-transition: left .3s ease-in-out;
+      -ms-transition: left .3s ease-in-out;
+          transition: left .3s ease-in-out;
 }
-#sidebar-checkbox:checked ~ .sidebar, #sidebar-checkbox:checked ~ .wrap, #sidebar-checkbox:checked ~ .sidebar-toggle {
-    -webkit-transform: translateX(14rem);
-    transform: translateX(14rem);
+
+#sidebar-checkbox:checked + .sidebar {
+  left: 0;
+  visibility: visible;
+}
+#sidebar-checkbox:checked ~ .wrap {
+  left: 14rem;
 }
 
 
