--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -25,7 +25,7 @@ body {
 }
 
 html {
-  font-family: "PT Serif", Georgia, Helvetica, serif;
+  font-family: "PT Serif", Helvetica, serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
