--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -263,6 +263,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Meta data line below post title */
 .post-date {
+  font-family: Georgia, serif;
   display: block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
