--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <div class="container">
           <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
-          <h3 class="masthead-title">
+          <h3 class="masthead-title" style="font-family: Helvetica, serif;">
             <a href="/Blog/" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
           </h3>
