--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -189,10 +189,8 @@ img {
   display: block;
   margin: 0 0 1rem;
   border-radius: 5px;img
-}
-img.resize {
-    width: auto; /* you can use % */
-    height: auto;
+  max-width:100%;
+  height:auto;
 }
 
 /* Tables */
