--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -187,10 +187,13 @@ blockquote p:last-child {
 
 img {
   display: block;
-  margin: 0 0 1rem;
+  margin: auto;
+  /*margin: 0 0 1rem;*/
   border-radius: 5px;img
-  max-width:100%;
-  height:auto;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
 }
 
 /* Tables */
