--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -189,7 +189,7 @@ img {
   display: block;
   margin: auto;
   /*margin: 0 0 1rem;*/
-  border-radius: 5px;img
+  border-radius: 5px;
   width: 100%;
   height: 100%;
   object-fit: contain;
