--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,7 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/404.html">Download</a>
+    <!-- <a class="sidebar-nav-item" href="{{ site.baseurl }}/404.html">Download</a> -->
     <a class="sidebar-nav-item" href="{{ site.githubrepo }}">GitHub project</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
