--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -20,7 +20,7 @@
  * Update the foundational and global aspects of the page.
  */
 
-@font-face {
+/*@font-face {
     font-family: "LXGW";
     src: url("/public/lxgw-wenkai/LXGWWenKai-Regular.ttf");
     font-display: fallback;
@@ -29,7 +29,7 @@
     font-family: "LXGW-mono";
     src: url("/public/lxgw-wenkai/LXGWWenKaiMono-Regular.ttf");
     font-display: fallback;
-}
+}*/
 
 * {
   -webkit-box-sizing: border-box;
@@ -44,7 +44,7 @@ body {
 }
 
 html {
-  font-family: "LXGW", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -143,7 +143,7 @@ abbr[title] {
 /* Code */
 code,
 pre {
-  font-family: "LXGW-mono", Menlo, Monaco, "Courier New", monospace;
+  font-family: Menlo, Monaco, "Courier New", monospace;
 }
 code {
   padding: .25em .5em;
