--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
           <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
           <h3 class="masthead-title" style="font-family: Helvetica, serif;">
-            <a href="/Blog/" title="Home">{{ site.title }}</a>
+            <a href="/blog/" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
           </h3>
         </div>
